--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,5 @@
     <string name="email_order_subject">Order from Windscreen Company</string>
     <string name="email_order_message">Hi,\n I would like to order this windscreen:
         <xliff:g example="Phone" id="name">%s</xliff:g>.
-        Quantity: 10.\nCheers,\nMr. Smith</string>
+        Quantity: 10.\nCheers,\nPetra Lehoczky</string>
 </resources>
